Fix overflow bug

--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,6 @@ body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
     padding: 0;
-    overflow: hidden;
 }
 
 /**  Links  **/
@@ -25,7 +24,6 @@ nav {
     padding: 0;
     top: 0;
     width: 100%;
-    right: 0;
     overflow: hidden;
     display: block;
     box-shadow: 2px 2px 5px lightgray;
